--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -1,3 +1,11 @@
 {
-  "REGISTER": "Registreren"
+  "REGISTER": "Registreren",
+  "components": {
+    "home": {
+      "WELCOME": "Welkom bij Quizr!",
+      "REGISTERHERE": "Registreer hier",
+      "QUIZMASTERLOGIN" : "Quizmaster login",
+      "GREETING" : "Hallo!"
+    }
+  }
 }
