--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -2,7 +2,9 @@
   "APP_TITLE":"Quizr",
   "MENU_HOME": "Home",
   "MENU_HELP": "Help",
-  
+  "QUIZMASTER_LOGIN": "Quizmaster / admin login",
+"USERNAME": "Gebruikersnaam",
+
   "LEAVE_GAME": "Spel verlaten",
   "TEAMNAME": "Teamnaam",
   "TEAMNAME_LENGTH": "Een teamnaam van minimaal 5 en maximaal 30 karakters is verplicht.",
