--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -26,9 +26,14 @@
   "COMPETING_TEAMS": "Jullie gaan het opnemen tegen",
   "LOGGED_OUT": "(Uitgelogd)",
   "KICKED_OUT": "Jullie zijn verwijderd door de quizmaster. Klik op OK om naar het registratiescherm te gaan.",
+  "KICK_OUT": "Kick dit team uit de game!",
   "REMOVED": "Verwijderd",
   "ERROR_MESSAGE_TITLE": "Oopsie",
   "PASSWORD": "Wachtwoord",
   "PASSWORD_LENGTH": "Een wachtwoord is minimaal 2 tekens.",
-  "LOGIN": "Inloggen"
+  "LOGIN": "Inloggen",
+  "START_GAME": "Start game",
+  "CURRENT_TEAMS_IN_LOBBY" : "De volgende teams zitten in de teamlobby:",
+  "WELCOME_TO_QUIZMASTER_LOBBY": "Welkom in de lobby",
+  "TEAM_KICKED_OUT": "Team kicked uit de game."
 }
