navbar and footer part to components so they can be filled through slots * about page * resultcode enum

--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -1,3 +1,6 @@
 {
-  "REGISTER": "Register"
+  "HOME_TITLE": "To the front page",
+  "REGISTER": "Register",
+  "MENU_ABOUT": "About",
+  "ABOUT_WELCOME": "All about quizr"
 }
