--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -2,5 +2,6 @@
   "HOME_TITLE": "To the front page",
   "REGISTER": "Register",
   "MENU_ABOUT": "About",
-  "ABOUT_WELCOME": "All about quizr"
+  "ABOUT_WELCOME": "All about quizr",
+  "CONTINUE_GAME": "Continue game"
 }
