--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -3,5 +3,14 @@
   "REGISTER": "Register",
   "MENU_ABOUT": "About",
   "ABOUT_WELCOME": "All about quizr",
-  "CONTINUE_GAME": "Continue game"
+  "GOTO_GAME": "Go to game screen",
+  "PAUSE_GAME": "Pause",
+  "RESUME_GAME": "Resume",
+  "FINISH_GAME": "Finish",
+  "Running": "Running",
+  "Paused": "Paused",
+  "Open":"Open",
+  "Closed": "Closed",
+  "Finished": "Finished",
+  "LOBBY_TITLE": "Back to the lobby"
 }
