--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -11,10 +11,11 @@
   "TEAMNAME_LENGTH": "Een teamnaam van minimaal 5 en maximaal 30 karakters is verplicht.",
   "USERNAME_LENGTH": "Een gebruikersnaam van minimaal 5 en maximaal 30 karakters is verplicht.",
   "HOME_WELCOME": "Welkom bij Quizr!",
+  "HOME_NAVTITLE": "Welkom",
   "HOME_REGISTERHERE": "Registreer hier",
   "HOME_QUIZMASTERLOGIN": "Quizmaster login",
   "CODE": "Code",
-  "REGISTER": "Registreren",
+  "REGISTER_TEAM": "Registreren als team",
   "KEEP_IT_CLEAN": "Houd het netjes!",
   "CODE_ORIGIN": "De code krijg je van de quizmaster.",
   "CODE_LENGTH": "Een code is minimaal 4 tekens.",
