--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -1,5 +1,5 @@
 {
-  "APP_TITLE": "Quizr",  
+  "APP_TITLE": "Quizr",
   "HOME_TITLE": "Naar de voorpagina",
   "MENU_ABOUT": "Over",
   "ABOUT_WELCOME": "Alles over quizr",
@@ -15,7 +15,8 @@
   "HOME_REGISTERHERE": "Registreer hier",
   "HOME_QUIZMASTERLOGIN": "Quizmaster login",
   "CODE": "Code",
-  "REGISTER_TEAM": "Registreren als team",
+  "REGISTER_TEAM": "Team aanmelden",
+  "REGISTER": "Aanmelden",
   "KEEP_IT_CLEAN": "Houd het netjes!",
   "CODE_ORIGIN": "De code krijg je van de quizmaster.",
   "CODE_LENGTH": "Een code is minimaal 4 tekens.",
@@ -27,7 +28,7 @@
   "ADJUST": "Aanpassen",
   "SAVE": "Opslaan",
   "COMPETING_TEAMS": "Jullie gaan het opnemen tegen",
-  "LOGGED_OUT": "(Uitgelogd)",
+  "LOGGED_OUT": "Uitgelogd",
   "KICKED_OUT": "Jullie zijn verwijderd door de quizmaster. Klik op OK om naar het registratiescherm te gaan.",
   "KICK_OUT": "Kick dit team uit de game!",
   "REMOVED": "Verwijderd",
@@ -40,12 +41,12 @@
   "PAUSE_GAME": "Pauzeren",
   "RESUME_GAME": "Hervatten",
   "FINISH_GAME": "Einde",
-  "CURRENT_TEAMS_IN_LOBBY" : "De volgende teams zitten in de teamlobby:",
+  "CURRENT_TEAMS_IN_LOBBY": "De volgende teams zitten in de teamlobby:",
   "WELCOME_TO_QUIZMASTER_LOBBY": "Welkom in de lobby",
   "TEAM_KICKED_OUT": "Team '{teamName}' uit het spel verwijderd.",
   "Running": "Bezig",
   "Paused": "Gepauzeerd",
-  "Open":"Open",
+  "Open": "Open",
   "Closed": "Gesloten",
   "Finished": "Afgelopen",
   "LOBBY_TITLE": "Terug naar de lobby"
