--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -2,6 +2,7 @@
   "HOME_NAVTITLE": "Welcome",
   "HOME_TITLE": "To the front page",
   "REGISTER_TEAM": "Register as a team",
+  "REGISTER": "Register",
   "MENU_ABOUT": "About",
   "ABOUT_WELCOME": "All about quizr",
   "GOTO_GAME": "Go to game screen",
@@ -10,7 +11,7 @@
   "FINISH_GAME": "Finish",
   "Running": "Running",
   "Paused": "Paused",
-  "Open":"Open",
+  "Open": "Open",
   "Closed": "Closed",
   "Finished": "Finished",
   "LOBBY_TITLE": "Back to the lobby"
