--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -2,6 +2,9 @@
   "HOME_NAVTITLE": "Welcome",
   "HOME_TITLE": "To the front page",
   "REGISTER_TEAM": "Register as a team",
+  "YOUR_TEAM": "Your team",
+  "TEAMNAME": "Team name",
+  "TEAM_MEMBERS_HERE": "No team members have been entered.",
   "REGISTER": "Register",
   "MENU_ABOUT": "About",
   "ABOUT_WELCOME": "All about quizr",
