--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -7,7 +7,9 @@
   "QUIZMASTER_LOGIN": "Quizmaster / admin login",
   "USERNAME": "Gebruikersnaam",
   "LEAVE_GAME": "Spel verlaten",
+  "YOUR_TEAM": "Jouw team",
   "TEAMNAME": "Teamnaam",
+  "TEAM_MEMBERS_HERE": "Nog geen teamleden ingevuld.",
   "TEAMNAME_LENGTH": "Een teamnaam van minimaal 5 en maximaal 30 karakters is verplicht.",
   "USERNAME_LENGTH": "Een gebruikersnaam van minimaal 5 en maximaal 30 karakters is verplicht.",
   "HOME_WELCOME": "Welkom bij Quizr!",
@@ -22,12 +24,12 @@
   "CODE_LENGTH": "Een code is minimaal 4 tekens.",
   "REGISTER_SUCCES": "Welkom!",
   "TEAMLOBBY_WELCOME": "Welkom in de lobby!",
-  "TEAMLOBBY_SIT_BACK": "Sit back and relax ...",
+  "TEAMLOBBY_SIT_BACK": "Sit back and relax..",
   "MEMBERS": "Teamleden",
   "MEMBER_NAMES": "Geef hier de namen van je teamleden op (een per regel).",
   "ADJUST": "Aanpassen",
   "SAVE": "Opslaan",
-  "COMPETING_TEAMS": "Jullie gaan het opnemen tegen",
+  "COMPETING_TEAMS": "Andere teams in het spel",
   "LOGGED_OUT": "Uitgelogd",
   "KICKED_OUT": "Jullie zijn verwijderd door de quizmaster. Klik op OK om naar het registratiescherm te gaan.",
   "KICK_OUT": "Kick dit team uit de game!",
