Added missing ResultCode locales

--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -53,5 +53,28 @@
   "Finished": "Afgelopen",
   "LOBBY_TITLE": "Terug naar de lobby",
   "POINTS": "p",
-  "TOTAL_NUMBER_OF_POINTS": "Totaal aantal punten"
+  "TOTAL_NUMBER_OF_POINTS": "Totaal aantal punten",
+  "InvalidCode": "Ongeldige code" ,
+  "TeamNameIsTaken": "Deze naam is al in gebruik.",
+  "InvalidQuizItemId": "Ongeldige quiz item id.",
+  "InvalidQuizId": "Ongeldige quiz id.",
+  "QuestionNotInQuiz": "Onbekende vraag voor deze quiz.",
+  "InvalidTeamId": "Ongeldig taem id.",
+  "QuestionNotInCurrentQuizSection": "Onbekende vraag voor huidige quiz sectie.",
+  "Ok": "Ok",
+  "InvalidInteractionId": "Ongeldige interactie id.",
+  "InvalidGameStateTransition": "Ongeldige transitie van spel status.",
+  "InvalidGameId": "Ongeldige game id.",
+  "InvalidUserNameOrPassword": "Ongeldige gebruikersnaam of wachtwoord.",
+  "InvalidUserId": "Ongeldige gebruikersnaam",
+  "QuizMasterUnauthorizedForGame": "U bent hiervoor niet geautoriseerd (game).",
+  "QuizMasterUnauthorizedForQuizItem": "U bent hiervoor niet geautoriseerd (quiz item).",
+  "LobbyUnavailableBecauseOfGameState": "De lobby is nu niet beschikbaar.",
+  "NoRoleClaimForUser": "Autorisatie-gegevens niet gevonden.",
+  "UnauthorizedRole": "U bent hier niet voor geautoriseerd." ,
+  "TeamAlreadyLoggedIn": "U bent als team al ingelogd.",
+  "ValidationError": "Er is een validatiefout opgetreden.",
+  "ThatsYou": "Hallo!",
+  "LoggedOut": "U bent uitgelogd.",
+  "TeamCantAccessQuizItemOtherThanTheCurrent": "U mag alleen het huidige item zien."
 }
