Minor textual changes

--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -2,7 +2,7 @@
   "APP_TITLE": "Quizr",
   "HOME_TITLE": "Naar de voorpagina",
   "MENU_ABOUT": "Over",
-  "ABOUT_WELCOME": "Alles over quizr",
+  "ABOUT_WELCOME": "Alles over Quizr",
   "MENU_HELP": "Help",
   "QUIZMASTER_LOGIN": "Quizmaster / admin login",
   "USERNAME": "Gebruikersnaam",
@@ -55,16 +55,16 @@
   "POINTS": "p",
   "TOTAL_NUMBER_OF_POINTS": "Totaal aantal punten",
   "InvalidCode": "Ongeldige code" ,
-  "TeamNameIsTaken": "Deze naam is al in gebruik.",
-  "InvalidQuizItemId": "Ongeldige quiz item id.",
-  "InvalidQuizId": "Ongeldige quiz id.",
+  "TeamNameIsTaken": "Teamnaam is al in gebruik.",
+  "InvalidQuizItemId": "Ongeldig quiz item id.",
+  "InvalidQuizId": "Ongeldig quiz id.",
   "QuestionNotInQuiz": "Onbekende vraag voor deze quiz.",
-  "InvalidTeamId": "Ongeldig taem id.",
+  "InvalidTeamId": "Ongeldig team id.",
   "QuestionNotInCurrentQuizSection": "Onbekende vraag voor huidige quiz sectie.",
   "Ok": "Ok",
   "InvalidInteractionId": "Ongeldige interactie id.",
   "InvalidGameStateTransition": "Ongeldige transitie van spel status.",
-  "InvalidGameId": "Ongeldige game id.",
+  "InvalidGameId": "Ongeldig game id.",
   "InvalidUserNameOrPassword": "Ongeldige gebruikersnaam of wachtwoord.",
   "InvalidUserId": "Ongeldige gebruikersnaam",
   "QuizMasterUnauthorizedForGame": "U bent hiervoor niet geautoriseerd (game).",
