Making 'een' more readable.

--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -26,7 +26,7 @@
   "TEAMLOBBY_WELCOME": "Welkom in de lobby!",
   "TEAMLOBBY_SIT_BACK": "Sit back and relax..",
   "MEMBERS": "Teamleden",
-  "MEMBER_NAMES": "Geef hier de namen van je teamleden op (een per regel).",
+  "MEMBER_NAMES": "Geef hier de namen van je teamleden op (één per regel).",
   "ADJUST": "Aanpassen",
   "SAVE": "Opslaan",
   "COMPETING_TEAMS": "Andere teams in het spel",
