--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -46,6 +46,10 @@
   "CURRENT_TEAMS_IN_LOBBY": "The following teams are waiting in the lobby:",
   "WELCOME_TO_QUIZMASTER_LOBBY": "Welcome to the lobby",
   "TEAM_KICKED_OUT": "Team '{teamName}' has been removed.",
+  "PREVIOUS_ITEM": "Previous question",
+  "NEXT_ITEM": "Next question",
+  "QUIZ_ITEM": "question",
+  "OF": "of",
   "Running": "Busy",
   "Paused": "Paused",
   "Open": "Open",
