--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -44,8 +44,13 @@
   "RESUME_GAME": "Hervatten",
   "FINISH_GAME": "Einde",
   "CURRENT_TEAMS_IN_LOBBY": "De volgende teams zitten in de teamlobby:",
+  "CURRENT_TEAMS_IN_GAME": "De volgende teams zitten in het spel:",
   "WELCOME_TO_QUIZMASTER_LOBBY": "Welkom in de lobby",
   "TEAM_KICKED_OUT": "Team '{teamName}' uit het spel verwijderd.",
+  "PREVIOUS_ITEM": "Vorige vraag",
+  "NEXT_ITEM": "Volgende vraag",
+  "QUIZ_ITEM": "Vraag",
+  "OF": "van",
   "Running": "Bezig",
   "Paused": "Gepauzeerd",
   "Open": "Open",
@@ -54,6 +59,7 @@
   "LOBBY_TITLE": "Terug naar de lobby",
   "POINTS": "p",
   "TOTAL_NUMBER_OF_POINTS": "Totaal aantal punten",
+  "SECTION": "sectie",
   "InvalidCode": "Ongeldige code" ,
   "TeamNameIsTaken": "Teamnaam is al in gebruik.",
   "InvalidQuizItemId": "Ongeldig quiz item id.",
