--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -58,7 +58,7 @@
   "LOBBY_TITLE": "Back to the lobby",
   "POINTS": "p",
   "TOTAL_NUMBER_OF_POINTS": "Total points",
-  "InvalidCode": "Invalid code" ,
+  "InvalidCode": "Invalid code",
   "TeamNameIsTaken": "Name already in use.",
   "InvalidQuizItemId": "Invalid quiz item id.",
   "InvalidQuizId": "Invalid quiz id.",
@@ -75,9 +75,10 @@
   "QuizMasterUnauthorizedForQuizItem": "As a quizmaster you're not authorized for this quiz item.",
   "LobbyUnavailableBecauseOfGameState": "The lobby is not available now.",
   "NoRoleClaimForUser": "No authorization data found.",
-  "UnauthorizedRole": "You are not authorized for this." ,
+  "UnauthorizedRole": "You are not authorized for this.",
   "TeamAlreadyLoggedIn": "Team already logged in.",
   "ValidationError": "A validation error occured.",
+  "GameIsPausedOrFinished": "The game is paused or finished. The thing you're trying to do is not allowed in these states.",
   "ThatsYou": "Hi!",
   "LoggedOut": "Logged out.",
   "TeamCantAccessQuizItemOtherThanTheCurrent": "You can only view the current quiz item."
