--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -60,7 +60,7 @@
   "POINTS": "p",
   "TOTAL_NUMBER_OF_POINTS": "Totaal aantal punten",
   "SECTION": "sectie",
-  "InvalidCode": "Ongeldige code" ,
+  "InvalidCode": "Ongeldige code",
   "TeamNameIsTaken": "Teamnaam is al in gebruik.",
   "InvalidQuizItemId": "Ongeldig quiz item id.",
   "InvalidQuizId": "Ongeldig quiz id.",
@@ -77,9 +77,10 @@
   "QuizMasterUnauthorizedForQuizItem": "U bent hiervoor niet geautoriseerd (quiz item).",
   "LobbyUnavailableBecauseOfGameState": "De lobby is nu niet beschikbaar.",
   "NoRoleClaimForUser": "Autorisatie-gegevens niet gevonden.",
-  "UnauthorizedRole": "U bent hier niet voor geautoriseerd." ,
+  "UnauthorizedRole": "U bent hier niet voor geautoriseerd.",
   "TeamAlreadyLoggedIn": "U bent als team al ingelogd.",
   "ValidationError": "Er is een validatiefout opgetreden.",
+  "GameIsPausedOrFinished": "Het spel is gepauseerd of afgelopen. De actie die je probeert uit te voeren mag nu niet.",
   "ThatsYou": "Hallo!",
   "LoggedOut": "U bent uitgelogd.",
   "TeamCantAccessQuizItemOtherThanTheCurrent": "U mag alleen het huidige item zien."
