--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -34,7 +34,7 @@
   "KICKED_OUT": "Jullie zijn verwijderd door de quizmaster. Klik op OK om naar het registratiescherm te gaan.",
   "KICK_OUT": "Kick dit team uit de game!",
   "REMOVED": "Verwijderd",
-  "ERROR_MESSAGE_TITLE": "Oopsie",
+  "ERROR_MESSAGE_TITLE": "Fout",
   "PASSWORD": "Wachtwoord",
   "PASSWORD_LENGTH": "Een wachtwoord is minimaal 2 tekens.",
   "LOGIN": "Inloggen",
