updated i18n * added translations

--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -22,7 +22,6 @@
   "KEEP_IT_CLEAN": "Keep it clean!",
   "CODE_ORIGIN": "You'll receive the code from your quizmaster.",
   "CODE_LENGTH": "A code consists of at least 4 characters.",
-  "REGISTER_SUCCES": "Registered successfully! Welcome!",
   "TEAMLOBBY_WELCOME": "Welcome to the lobby!",
   "TEAMLOBBY_SIT_BACK": "Sit back and relax..",
   "MEMBERS": "Team members",
@@ -44,6 +43,7 @@
   "RESUME_GAME": "Resume",
   "FINISH_GAME": "End",
   "CURRENT_TEAMS_IN_LOBBY": "The following teams are waiting in the lobby:",
+  "CURRENT_TEAMS_IN_GAME": "Teams in the game:",
   "WELCOME_TO_QUIZMASTER_LOBBY": "Welcome to the lobby",
   "TEAM_KICKED_OUT": "Team '{teamName}' has been removed.",
   "PREVIOUS_ITEM": "Previous question",
@@ -58,6 +58,7 @@
   "LOBBY_TITLE": "Back to the lobby",
   "POINTS": "p",
   "TOTAL_NUMBER_OF_POINTS": "Total points",
+  "SECTION": "section",
   "InvalidCode": "Invalid code",
   "TeamNameIsTaken": "Name already in use.",
   "InvalidQuizItemId": "Invalid quiz item id.",
@@ -81,5 +82,16 @@
   "GameIsPausedOrFinished": "The game is paused or finished. The thing you're trying to do is not allowed in these states.",
   "ThatsYou": "Hi!",
   "LoggedOut": "Logged out.",
-  "TeamCantAccessQuizItemOtherThanTheCurrent": "You can only view the current quiz item."
+  "TeamCantAccessQuizItemOtherThanTheCurrent": "You can only view the current quiz item.",
+  "SET_OUTCOME_CORRECT": "Approve answer",
+  "SET_OUTCOME_INCORRECT": "Reject answer",
+  "NUMBER_OF_CONNECTIONS": "Number of connections",
+  "BEAMER_TITLE": "Open beamer view",
+  "CONFIRM_END_GAME": "Are you sure you want to end the game?",
+  "PLEASE_CONFIRM": "Please confirm",
+  "YES": "Yes",
+  "NO": "No",
+  "THE_GAME_IS_PAUSED": "The game is paused",
+  "WAIT_FOR_RESUME": "Wait for the game to be resumed",
+  "EDIT": "Edit"
 }
