--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -93,5 +93,6 @@
   "NO": "No",
   "THE_GAME_IS_PAUSED": "The game is paused",
   "WAIT_FOR_RESUME": "Wait for the game to be resumed",
-  "EDIT": "Edit"
+  "EDIT": "Edit",
+  "CHANGES_SAVED": "All answers saved"
 }
