--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -93,6 +93,6 @@
   "NO": "Nee",
   "THE_GAME_IS_PAUSED": "Het spel is gepauzeerd",
   "WAIT_FOR_RESUME": "Wacht tot het spel hervat wordt",
-  "EDIT": "Bewerken"
-
+  "EDIT": "Bewerken",
+  "CHANGES_SAVED": "Alle antwoorden zijn opgeslagen"
 }
