added property to mediaObjects: TeamVisible. Some media objects (video etc.) might spoil the question if the team can control playback * back to debounce, better ux

--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -94,5 +94,5 @@
   "THE_GAME_IS_PAUSED": "The game is paused",
   "WAIT_FOR_RESUME": "Wait for the game to be resumed",
   "EDIT": "Edit",
-  "CHANGES_SAVED": "All answers saved"
+  "CHANGES_SAVED": "Answers automatically saved."
 }
