--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -94,5 +94,5 @@
   "THE_GAME_IS_PAUSED": "Het spel is gepauzeerd",
   "WAIT_FOR_RESUME": "Wacht tot het spel hervat wordt",
   "EDIT": "Bewerken",
-  "CHANGES_SAVED": "Alle antwoorden zijn opgeslagen"
+  "CHANGES_SAVED": "Antwoord(en) automatisch opgeslagen."
 }
