--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -47,7 +47,9 @@
   "WELCOME_TO_QUIZMASTER_LOBBY": "Welcome to the lobby",
   "TEAM_KICKED_OUT": "Team '{teamName}' has been removed.",
   "PREVIOUS_ITEM": "Previous question",
+  "SKIP_10_BACK": "10",
   "NEXT_ITEM": "Next question",
+  "SKIP_10_FORWARD": "10",
   "QUIZ_ITEM": "question",
   "OF": "of",
   "Running": "Busy",
