--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -47,7 +47,9 @@
   "WELCOME_TO_QUIZMASTER_LOBBY": "Welkom in de lobby",
   "TEAM_KICKED_OUT": "Team '{teamName}' uit het spel verwijderd.",
   "PREVIOUS_ITEM": "Vorige vraag",
+  "SKIP_10_BACK": "10",
   "NEXT_ITEM": "Volgende vraag",
+  "SKIP_10_FORWARD": "10",
   "QUIZ_ITEM": "Vraag",
   "OF": "van",
   "Running": "Bezig",
