review mode fixes

--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -97,5 +97,7 @@
   "THE_GAME_IS_PAUSED": "The game is paused",
   "WAIT_FOR_RESUME": "Wait for the game to be resumed",
   "EDIT": "Edit",
-  "CHANGES_SAVED": "Answers automatically saved."
+  "CHANGES_SAVED": "Answers automatically saved.",
+  "REVIEWING": "Reviewing",
+  "REVIEW_CURRENT_SECTION": "Review section"
 }
