--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -97,5 +97,7 @@
   "THE_GAME_IS_PAUSED": "Het spel is gepauzeerd",
   "WAIT_FOR_RESUME": "Wacht tot het spel hervat wordt",
   "EDIT": "Bewerken",
-  "CHANGES_SAVED": "Antwoord(en) automatisch opgeslagen."
+  "CHANGES_SAVED": "Antwoord(en) automatisch opgeslagen.",
+  "REVIEWING": "Antwoorden",
+  "REVIEW_CURRENT_SECTION": "Antwoordmodus"
 }
