--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -99,5 +99,6 @@
   "EDIT": "Edit",
   "CHANGES_SAVED": "Answers automatically saved.",
   "REVIEWING": "Reviewing",
-  "REVIEW_CURRENT_SECTION": "Review section"
+  "REVIEW_CURRENT_SECTION": "Review section",
+  "OPEN_GAME": "Open"
 }
