--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -99,5 +99,6 @@
   "EDIT": "Bewerken",
   "CHANGES_SAVED": "Antwoord(en) automatisch opgeslagen.",
   "REVIEWING": "Antwoorden",
-  "REVIEW_CURRENT_SECTION": "Antwoordmodus"
+  "REVIEW_CURRENT_SECTION": "Antwoordmodus",
+  "OPEN_GAME": "Open"
 }
