select game from the lobby screen

--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -5,8 +5,11 @@
   "ABOUT_WELCOME": "All about Quizr",
   "MENU_HELP": "Help",
   "QUIZMASTER_LOGIN": "Quizmaster / admin login",
+  "GAME": "game",
+  "GAMES": "games",
   "USERNAME": "Username",
   "LEAVE_GAME": "Leave game",
+  "SELECT_GAME": "Select game",
   "YOUR_TEAM": "Your team",
   "TEAMNAME": "Team name",
   "TEAM_MEMBERS_HERE": "No team members added yet.",
