--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -5,8 +5,11 @@
   "ABOUT_WELCOME": "Alles over Quizr",
   "MENU_HELP": "Help",
   "QUIZMASTER_LOGIN": "Quizmaster / admin login",
+  "GAME": "spel",
+  "GAMES": "spellen",
   "USERNAME": "Gebruikersnaam",
   "LEAVE_GAME": "Spel verlaten",
+  "SELECT_GAME": "Spel selecteren",
   "YOUR_TEAM": "Jouw team",
   "TEAMNAME": "Teamnaam",
   "TEAM_MEMBERS_HERE": "Nog geen teamleden ingevuld.",
