finished move to mediatr * moved to SimpleInjector * refactored stuff * removed ErrorHandler and ErrorOccurred.cs * pruned ResultCode.cs

--- a/team-frontend/src/locales/en.json
+++ b/team-frontend/src/locales/en.json
@@ -66,18 +66,12 @@
   "SECTION": "section",
   "InvalidCode": "Invalid code",
   "TeamNameIsTaken": "Name already in use.",
-  "InvalidQuizItemId": "Invalid quiz item id.",
-  "InvalidQuizId": "Invalid quiz id.",
+  "InvalidEntityId": "Invalid id.",
   "QuestionNotInQuiz": "Question not in quiz.",
-  "InvalidTeamId": "Invalid team id.",
-  "InvalidSectionId": "Invalid section id.",
   "QuestionNotInCurrentQuizSection": "Question not in current quiz section.",
   "Ok": "Ok",
-  "InvalidInteractionId": "Invalid interaction id.",
   "InvalidGameStateTransition": "Invalid game status transition.",
-  "InvalidGameId": "Invalid game id.",
   "InvalidUserNameOrPassword": "Invalid username or password.",
-  "InvalidUserId": "Invalid username",
   "QuizMasterUnauthorizedForGame": "As a quizmaster you're not authorized for this game.",
   "QuizMasterUnauthorizedForQuizItem": "As a quizmaster you're not authorized for this quiz item.",
   "LobbyUnavailableBecauseOfGameState": "The lobby is not available now.",
