--- a/team-frontend/src/locales/nl.json
+++ b/team-frontend/src/locales/nl.json
@@ -66,18 +66,12 @@
   "SECTION": "onderdeel",
   "InvalidCode": "Ongeldige code",
   "TeamNameIsTaken": "Teamnaam is al in gebruik.",
-  "InvalidQuizItemId": "Ongeldig quiz item id.",
-  "InvalidQuizId": "Ongeldig quiz id.",
+  "InvalidEntityId": "Ongeldige id.",
   "QuestionNotInQuiz": "Onbekende vraag voor deze quiz.",
-  "InvalidTeamId": "Ongeldig team id.",
-  "InvalidSectionId": "Ongeldige section id.",
   "QuestionNotInCurrentQuizSection": "Onbekende vraag voor huidige quiz sectie.",
   "Ok": "Ok",
-  "InvalidInteractionId": "Ongeldige interactie id.",
   "InvalidGameStateTransition": "Ongeldige transitie van spelstatus.",
-  "InvalidGameId": "Ongeldig game id.",
   "InvalidUserNameOrPassword": "Ongeldige gebruikersnaam of wachtwoord.",
-  "InvalidUserId": "Ongeldige gebruikersnaam",
   "QuizMasterUnauthorizedForGame": "U bent hiervoor niet geautoriseerd (game).",
   "QuizMasterUnauthorizedForQuizItem": "U bent hiervoor niet geautoriseerd (quiz item).",
   "LobbyUnavailableBecauseOfGameState": "De lobby is nu niet beschikbaar.",
